Bug 387379 - CompareUtility should support comparison of java.sql.Timestamp and java.util.Date - https://bugs.eclipse.org/bugs/show_bug.cgi?id=387379
unreliable test ignored

Change-Id: I5c8cac05379969b7c64b9ba0c61953f4c6814597
Reviewed-on: https://git.eclipse.org/r/25318
Tested-by: Hudson CI
Reviewed-by: Judith Gull <jgu@bsiag.com>